# VoltEdge

./: Cargo.toml  README.md  dfx.json  generate_did.sh  package-lock.json  package.json
backend/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/assets/images/: logo.png:Zone.Identifier
frontend/src/components/: EnergyForm.tsx  Footer.tsx  Navbar.tsx  Recommendations.tsx
frontend/src/pages/: EnergyUsagePage.tsx  HelpPage.tsx  HomePage.tsx  ProfilePage.tsx  RecommendationsPage.tsx  SettingsPage.tsx
frontend/src/services/: energyService.ts
frontend/src/styles/: index.css
frontend/src/utils/: api.ts
src/VoltEdge_backend/: Cargo.toml  VoltEdge_backend.did
src/VoltEdge_backend/src/: lib.rs
src/VoltEdge_frontend/: package.json  vite.config.js
src/VoltEdge_frontend/src/: App.jsx
src/VoltEdge_frontend/src/components/auth/: auth.jsx
src/VoltEdge_frontend/src/components/dashboard/: Dashboard.css  Dashboard.jsx
src/VoltEdge_frontend/src/components/footer/: Footer.css  Footer.tsx
src/VoltEdge_frontend/src/components/home/: Home.css  Home.jsx
src/VoltEdge_frontend/src/components/login/: Login.jsx
src/VoltEdge_frontend/src/components/navbar/: Navbar.css  Navbar.jsx
