[package]
name = "VoltEdge_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-types = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"


